
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   155: AstroFloyd, 23/03/2011
     - Added intent statements and Doxygen comments
     
   154: AstroFloyd, 23/03/2011
     - Minor updates
     
   153: AstroFloyd, 22/03/2011
     - Added the 9 new plotting variables that are in the plt[12] file since yesterday 
       (Rev.1373) + 2 older ones:
       - 82-83: Pc; Prot,c; 84-87: BE terms, 88-89: Sc; S@T=1e5K; 90-91: Rhe; Rco, 92: STRMDL
     - Always read .plt[12] files unformatted
     - Use Ebind rather than Ubind consistently
     
   152: AstroFloyd, 22/03/2011
     - plotplt: added variable 223: Winds
     - plt_functions: clean up/comment
     
   150: AstroFloyd, 11/01/2011
     - Updated Doxyfile
     
   149: AstroFloyd, 11/01/2011
     - Updated CMake files for release: 
       - added option to switch off code_version generation
       - remove plotpltn/p
       - add installation
     - Updated nagfor file
     
   148: AstroFloyd, 09/01/2011
     - Added CMake files
     - plotpltp: use constants
   
   147: AstroFloyd, 07/01/2011
     - Move unused (NRF) code from functions.f90 to unused_code.f90
     
   146: AstroFloyd, 07/01/2011
     - Updated copyright to 2011
     - Updated (Doxygen) comments: file and routine titles everywhere(?)
     - Removed old Fortran intrinsics (dlog)
     - Use integer system(), and with status=
     - In plotplt, made hlp,hlbl logical iso character (y/n)
     - Added intent()
          
   145: AstroFloyd, 06/01/2011
     - Updated code to compile with gfortran 4.5, F2008 standard
     - Updated Makefile
   
   144: AstroFloyd, 15/11/2010
     - plotplt: fix automatic plot limits 1.e-20 should have been -1.e20 -> -huge
     - findplt: use command-line arguments only; print syntax and exit otherwise
   
   143: AstroFloyd, 25/08/2010
     - added global variable libdir and read it from settings file
     